# new-engineering-test

./: .env.example  .eslintrc.cjs  .gitignore  AI_PROMPTS.md  DECISIONS.md  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  vite.config.ts
ai_chat/: asgi.py  settings.py  urls.py  wsgi.py
chat/: models.py  serializers.py  throttles.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_messagefeedback.py
chat/services/: gemini.py
frontend/: index.html  tailwind.css  tsconfig.json
frontend/src/: main.ts
scripts/: list_gemini_models.py
templates/: base.html  index.html
tests/: test_api.py  test_models.py
